Add image to toscana page

--- a/recipes/toscana.html
+++ b/recipes/toscana.html
@@ -7,5 +7,8 @@
 
   <body>
     <h1>Super-Delicious Zuppa Toscanas</h1>
+    <img src="../img/toscana.jpg">
+    <h2>Description</h2>
+    <p>This is an oh-so-good recipe. Just the right amount of spice to make you take a cold drink but definitely keep coming back for more! This soup is irresistible!</p>
   </body>
 </html>
