Add ingridients to toscana

--- a/recipes/toscana.html
+++ b/recipes/toscana.html
@@ -10,5 +10,17 @@
     <img src="../img/toscana.jpg">
     <h2>Description</h2>
     <p>This is an oh-so-good recipe. Just the right amount of spice to make you take a cold drink but definitely keep coming back for more! This soup is irresistible!</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 pound bulk mild Italian sausage</li>
+      <li>1 ¼ teaspoons crushed red pepper flakes</li>
+      <li>4 slices bacon, cut into 1/2 inch pieces</li>
+      <li>1 large onion, diced</li>
+      <li>1 tablespoon minced garlic</li>
+      <li>5 (13.75 ounce) cans chicken broth</li>
+      <li>6 potatoes, thinly sliced</li>
+      <li>1 cup heavy cream</li>
+       <li>¼ bunch fresh spinach, tough stems removed</li>
+      </ul>
   </body>
 </html>
