--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/toscana.html">Super-Delicious Zuppa Toscana</a>
+    <ul>
+      <li><a href="./recipes/toscana.html">Super-Delicious Zuppa Toscana</a></li>
+    <li><a href="./recipes/stew.html">Rutabaga Beef Stew</a></li>
+   <li><a href="./recipes/soup.html">Chicken Tortilla Soup</a></li>
   </body>
 </html>
